removed the auto_theme

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,7 +19,7 @@ plugins:
       draggable: true
       skip_classes:
         - custom-skip-class-name
-      auto_themed: false
+      # auto_themed: false
       auto_caption: false
       caption_position: bottom
       background: white
